src/app/portfolio/portfolio-list/portfolio-list.component.scss
.bg-kim {
  background: url("../../../assets/images/kim_bg.png");
  background-size: cover;
  background-position: right;
  height: 100%;
  overflow: hidden;
  position: relative;
}

.relevance {
  display: flex;
  justify-content: center;
  text-align: center;
  flex-direction: column;
  z-index: 10;
  height: 100vh;
  h1 {
    font-size: 64px;
    font-weight: 700;
    letter-spacing: 2px;
  }
  p, a {
    margin-top: 15px;
    font-size: 26px;
  }
  @media (min-width: 576px) and (max-width: 991px) {
    h1 {
      text-align: center;
      color: #ffffff;
      font-size: 60px;
    }
    p, a {
      text-align: center;
      color: #ffffff;
      font-size: 26px;
    }
  }
  @media (max-width: 575px) {
    h1 {
      text-align: center;
      color: #ffffff;
      font-size: 40px;
    }
    p, a {
      text-align: center;
      color: #ffffff;
      font-size: 20px;
    }
  }
}

.img-responsive {
  @media (min-width: 992px) {
    height: 200%;
    position: absolute;
    left: -45%;
    top: -25%;
  }
  //@media (min-width: 992px) and (max-width: 1439px) {
  //  height: 200%;
  //  position: absolute;
  //  left: -80%;
  //  top: -25%;
  //}
  @media (max-width: 991px) {
    display: none;
  }
}

ul {
  padding: 0;
}

.project {
  transition: 1000ms all;
  &:hover {
    margin-left: 10px;
    transition: 1000ms all;
    &::before {
      content: '//  ';
      color: #ef6666;
      animation: fadein 1s;
      -moz-animation: fadein 1s; /* Firefox */
      -webkit-animation: fadein 1s; /* Safari and Chrome */
      -o-animation: fadein 1s; /* Opera */
    }
  }
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@-moz-keyframes fadein { /* Firefox */
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@-webkit-keyframes fadein { /* Safari and Chrome */
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@-o-keyframes fadein { /* Opera */
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

